feat: update application.properties to store data at file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.servlet.context-path=/api
 
 #DATABASE
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:h2:mem:session
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:./session
