--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:file:./session
+
+#MVC
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
