--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -6,3 +6,6 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:h2:mem:session
+
+#MVC
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
