refactor: improve OpenApiConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.url=jdbc:h2:file:./session
 
 #MVC
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#PROJECT
+project.description=@project.description@
+project.name=@project.name@
+project.organization.name=@project.organization.name@
+project.organization.url=@project.organization.url@
+project.version=@project.version@
