--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/api
 
 #DATABASE
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:file:./session
