feat: add profiles

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:h2:mem:session
 
 #MVC
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#PROFILE
+spring.profiles.active=test
